[FIX] sign: better sign item's text sizing
When opening a document to sign (to edit it, not actually sign it) the
sign box fields contains text that are not really readable due to their
funky sizing (too big and truncated).

This commit fixes it by making the font size relative to the one of the
sign box and making it scale correctly. Also, it better aligns the
move-handler and the responsible field.

opw-2459952

closes odoo/enterprise#16517

X-original-commit: ca60f82d1d51caf2ef468ff2ec88f1d5fd0a8a23

--- a/sign/static/src/css/iframe.css
+++ b/sign/static/src/css/iframe.css
@@ -47,7 +47,6 @@
 }
 
 .o_sign_sign_item .o_placeholder {
-    font-size: 12pt !important;
     vertical-align: middle;
 }
 
@@ -294,9 +293,9 @@ textarea.o_sign_sign_item {
     right: 0;
     overflow: hidden;
     white-space: nowrap;
-    font-size: 10pt;
+    font-size: 0.5em;
     text-align: right;
-    padding: 2px;
+    padding: 2px 16px 2px 2px; /* 16px right to prevent overflow with resizing handler */
     margin: 2px;
 
 }
